tests/jsx_intrinsics.custom/jsx_intrinsics.custom.exp
Error: main.js:6
  6: <div id={42} />; // Error: (`id` prop) number ~> string
              ^^ Cannot create `div` element because in property `id`, number [1] is incompatible with string [2].
  References:
    6: <div id={42} />; // Error: (`id` prop) number ~> string
                ^^ [1]: number
    4:   div: $JSXIntrinsic<{id: string}>,
                                 ^^^^^^ [2]: string. See lib: lib/jsx.js:4

Error: main.js:9
  9: (<div id="foo" />.props.id: number); // Error: (`id` prop) number ~> string
      ^^^^^^^^^^^^^^^^^^^^^^^^^ Cannot cast `<div />.props.id` to number because string [1] is incompatible with number [2].
  References:
    4:   div: $JSXIntrinsic<{id: string}>,
                                 ^^^^^^ [1]: string. See lib: lib/jsx.js:4
    9: (<div id="foo" />.props.id: number); // Error: (`id` prop) number ~> string
                                   ^^^^^^ [2]: number

Error: strings.js:9
  9: <Div />; // This is fine
      ^^^ Cannot create `Div` element because property `id` is missing in props [1] but exists in object type [2].
  References:
    9: <Div />; // This is fine
       ^^^^^^^ [1]: props
    4:   div: $JSXIntrinsic<{id: string}>,
                            ^^^^^^^^^^^^ [2]: object type. See lib: lib/jsx.js:4

Error: strings.js:10
 10: <Bad />; // Error: 'bad' not in JSXIntrinsics
      ^^^ Cannot create `bad` element because property `bad` is missing in `$JSXIntrinsics` [1].
  References:
   10: <Bad />; // Error: 'bad' not in JSXIntrinsics
        ^^^ [1]: `$JSXIntrinsics`

Error: strings.js:11
 11: <Str />; // Error: string ~> keys of JSXIntrinsics
      ^^^ An indexer property is missing in `$JSXIntrinsics` [1].
  References:
   11: <Str />; // Error: string ~> keys of JSXIntrinsics
        ^^^ [1]: `$JSXIntrinsics`

Error: strings.js:13
 13: React.createElement('div', {}); // This is fine
                                ^^ Cannot call `React.createElement` because property `id` is missing in props [1] but exists in object type [2].
  References:
   13: React.createElement('div', {}); // This is fine
                                  ^^ [1]: props
    4:   div: $JSXIntrinsic<{id: string}>,
                            ^^^^^^^^^^^^ [2]: object type. See lib: lib/jsx.js:4

Error: strings.js:14
 14: React.createElement('bad', {}); // Error: 'bad' not in JSXIntrinsics
                         ^^^^^ Cannot create `bad` element because property `bad` is missing in `$JSXIntrinsics` [1].
  References:
   14: React.createElement('bad', {}); // Error: 'bad' not in JSXIntrinsics
                           ^^^^^ [1]: `$JSXIntrinsics`

Error: strings.js:15
 15: React.createElement(Str, {}); // Error: string ~> keys of JSXIntrinsics
                         ^^^ An indexer property is missing in `$JSXIntrinsics` [1].
  References:
   15: React.createElement(Str, {}); // Error: string ~> keys of JSXIntrinsics
                           ^^^ [1]: `$JSXIntrinsics`

Error: strings.js:18
 18: <Div id={42} />; // Not an error but should be eventually
              ^^ Cannot create `Div` element because in property `id`, number [1] is incompatible with string [2].
  References:
   18: <Div id={42} />; // Not an error but should be eventually
                ^^ [1]: number
    4:   div: $JSXIntrinsic<{id: string}>,
                                 ^^^^^^ [2]: string. See lib: lib/jsx.js:4


Found 9 errors
